# prefixed_id

./: .gitignore  README.md  mix.exs
lib/: prefixed_id.ex  prefixed_uuid.ex
lib/prefixed_id/: nifs.ex
lib/prefixed_uuid/: nifs.ex
native/prefixed_id/: Cargo.toml  README.md
native/prefixed_id/src/: lib.rs
native/prefixed_uuid/: Cargo.toml  README.md
native/prefixed_uuid/src/: lib.rs
test/: prefixed_uuid_test.exs
