[package]
name = "prefixed_uuid"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "prefixed_uuid"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base62 = "2.0.2"
rustler = "0.33.0"
uuid = { version = "1.9.1", features = ["fast-rng", "std", "v7"], default-features = false }
